fixed text overlap on Desktop

--- a/src/styles/blocks/productCard.scss
+++ b/src/styles/blocks/productCard.scss
@@ -16,6 +16,10 @@
       transform: scale(1.1);
       border-radius: 24px;
       box-shadow: 0 10px 13px -7px #000, 3px 3px 15px 6px rgba(0,0,0,0.12);
+
+      @include onDesktop {
+        transform: scale(1.05);
+      }
     }
 
     @include onTablet {
